--- a/_includes/buy.html
+++ b/_includes/buy.html
@@ -3,6 +3,10 @@
       <div class="row align-items-center">
         <div class="col-7 col-lg-8 text-center">
           <h3 class="text-orange">Buy Radical Companies</h3>
+          <p>
+            <a href="#" class="btn btn-light text-orange">Get it at Amazon</a>
+            <a href="#" class="btn btn-light text-orange">Pay what you can</a>
+          </p>
         </div>
         <div class="col-5 col-lg-4 mb-0">
           <img src="/assets/img/cover-small.jpg" class="img-fluid neg-y card p-0" alt="">
