add gumroad demo

--- a/_includes/buy.html
+++ b/_includes/buy.html
@@ -3,9 +3,14 @@
       <div class="row align-items-center">
         <div class="col-7 col-lg-8 text-center">
           <h3 class="text-orange">Buy Radical Companies</h3>
+          <p>In your favorite bookstore:</p>
           <p>
-            <a href="#" class="btn btn-light text-orange">Get it at Amazon</a>
-            <a href="#" class="btn btn-light text-orange">Pay what you can</a>
+            <a href="https://www.amazon.com/RADICAL-Companies-Organized-Success-Employees/dp/164184650X/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1634152355&sr=8-3" class="btn btn-light text-orange">Amazon</a>
+            <a href="https://www.barnesandnoble.com/w/radical-companies-matt-perez/1139995398?ean=9781641846424" class="btn btn-light text-orange mx-3">Barnes&Noble</a>
+            <a href="https://www.lulu.com/en/us/shop/jose-leal-and-adrian-perez-and-matt-perez/radical-companies/ebook/product-n5jp7z.html?page=1&pageSize=4" class="btn btn-light text-orange">Lulu</a><br><br>
+            <script src="https://gumroad.com/js/gumroad.js"></script>
+            <p>Or pay what you can at</p>
+            <a class="btn btn-light text-orange" href="https://app.gumroad.com/l/demo">Gumroad</a>
           </p>
         </div>
         <div class="col-5 col-lg-4 mb-0">
