add buy links and blog pagination

--- a/_includes/buy.html
+++ b/_includes/buy.html
@@ -10,7 +10,7 @@
             <a href="https://www.lulu.com/en/us/shop/jose-leal-and-adrian-perez-and-matt-perez/radical-companies/ebook/product-n5jp7z.html?page=1&pageSize=4" class="btn btn-light text-orange">Lulu</a><br><br>
             <script src="https://gumroad.com/js/gumroad.js"></script>
             <p>Or pay what you can at</p>
-            <a class="btn btn-light text-orange" href="https://app.gumroad.com/l/demo">Gumroad</a>
+            <a class="btn btn-light text-orange" href="https://radicalcompanies.gumroad.com/l/kotjj">Gumroad</a>
           </p>
         </div>
         <div class="col-5 col-lg-4 mb-0">
