--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -3,9 +3,15 @@
        <div class="row">
             <div class="col-lg-6 text-center offset-lg-3 text-light">
                 <h3 class="h1"><strong>Get The Book!</strong></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non voluptates veniam ut atque eius sunt sequi. Nemo, quae inventore suscipit sunt, dicta veniam, adipisci placeat maiores sapiente temporibus dignissimos iste?</p>
-                <a href="#" class="btn btn-light text-orange">Get it at Amazon</a>
-                <a href="#" class="btn btn-light text-orange">Pay what you can</a>
+                <p>In your favorite bookstore:</p>
+                <p>
+                    <a href="https://www.amazon.com/RADICAL-Companies-Organized-Success-Employees/dp/164184650X/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1634152355&sr=8-3" class="btn btn-light text-orange">Amazon</a>
+                    <a href="https://www.barnesandnoble.com/w/radical-companies-matt-perez/1139995398?ean=9781641846424" class="btn btn-light text-orange mx-3">Barnes&Noble</a>
+                    <a href="https://www.lulu.com/en/us/shop/jose-leal-and-adrian-perez-and-matt-perez/radical-companies/ebook/product-n5jp7z.html?page=1&pageSize=4" class="btn btn-light text-orange">Lulu</a><br><br>
+                    <script src="https://gumroad.com/js/gumroad.js"></script>
+                    <p>Or pay what you can at</p>
+                    <a class="btn btn-light text-orange" href="https://radicalcompanies.gumroad.com/l/kotjj">Gumroad</a>
+                </p>
             </div>
         </div>
     </div>
