--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-6 text-white text-lg-start">
-                <p>&copy; Pradera Media.</p>
+                <p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">&copy; Pradera Media</p>
             </div>
             <div class="col-lg-6 text-white text-lg-end">
                 <p>
