assorted changes in ui

--- a/_includes/authors.html
+++ b/_includes/authors.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="card p-0 mb-5">
             <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <img src="https://via.placeholder.com/1000x1000" class="img-fluid" alt="">
+                <div class="col-lg-4 p-5 pe-0">
+                    <img src="/assets/img/authors/mperez.jpg" class="img-fluid" alt="">
                 </div>
-                <div class="col-lg-6 p-5">
+                <div class="col-lg-8 p-5">
                     <h2 class="text-orange">Matt M. Perez</h2>
                     <p>I’ve spent 40+ years in technology. My work life has been bookended by Sun Microsystems at one end and Nearsoft at the other. They have shaped my beliefs about business and Capitalism, for very different reasons. The experiences I’ve had along the way, good and bad, underpin the RADICAL concept.</p>
                     <p>Over time I got off the treadmill and by the time Roberto and I started Nearsoft, about 10 years later, I was a very different person.</p>
@@ -17,10 +17,10 @@
 
         <div class="card p-0 mb-5">
             <div class="row align-items-center">
-                <div class="col-lg-6">
+                <div class="col-lg-4 p-5 pe-0">
                     <img src="https://via.placeholder.com/1000x1000" class="img-fluid" alt="">
                 </div>
-                <div class="col-lg-6 p-5 order-lg-1">
+                <div class="col-lg-8 p-5 order-lg-1">
                     <h2 class="text-orange">Adrian Perez</h2>
                     <p>I have always been interested in what I would call the Third Way. When dealing with a dichotomy, both sides are getting it wrong. The idea is to end the game that no longer serves us, so we can arrive at an idea that is new enough to create a whole new game.</p>
                     <p>It will take all of us, operating at our best to pull ourselves out of the nosedive that global civilization finds itself in. And I intend to help make the social tools we will need to free ourselves to operate at our maximum capacity for independent action.</p>
@@ -30,10 +30,10 @@
 
         <div class="card p-0 mb-5">
             <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <img src="https://via.placeholder.com/1000x1000" class="img-fluid" alt="">
+                <div class="col-lg-4 p-5 pe-0">
+                    <img src="/assets/img/authors/jleal.jpg" class="img-fluid" alt="">
                 </div>
-                <div class="col-lg-6 p-5 order-lg-1">
+                <div class="col-lg-8 p-5 order-lg-1">
                     <h2 class="text-orange">José Leal</h2>
                     <p>I started several businesses while I was in my late teens and rode the Internet wave, reaching that entrepreneurial dream—the successful exit.</p>
                     <p>I’ve spent the last several years researching and studying what makes us human and what prompts us to certain actions and choices. Our vision is a future where the traditional FIAT hierarchy no longer grinds people into submission but rather the new realities of co-management and co-ownership give people and organizations the opportunity to flourish.</p>
