--- a/_includes/buy.html
+++ b/_includes/buy.html
@@ -1,4 +1,4 @@
-<section class="trans-white-accent">
+<section class="trans-white-accent section-buy" id="buy">
     <div class="container bg-black text-light p-5">
       <div class="row align-items-center">
         <div class="col-7 col-lg-8 text-center">
@@ -14,7 +14,7 @@
           </p>
         </div>
         <div class="col-5 col-lg-4 mb-0">
-          <img src="/assets/img/cover-small.jpg" class="img-fluid neg-y card p-0" alt="">
+          <img src="/assets/img/cover.jpg" class="img-fluid neg-y card p-0" alt="">
         </div>
       </div>
     </div>
