--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,13 +1,42 @@
 <section>
     <div class="container">
-        <div class="row align-items-center justify-content-center justify-content-lg-start text-center text-lg-start">
-            <div class="col-3 col-lg-2 offset-lg-2 ">
-                <img src="https://via.placeholder.com/200x200" class="img-fluid rounded-circle" alt="">
+        <div id="testimonialsCarousel" class="carousel slide carousel-dark" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row align-items-center justify-content-center justify-content-lg-start text-center text-lg-start">
+                    <div class="col-3 col-lg-2 offset-lg-2 ">
+                        <img src="https://via.placeholder.com/200x200" class="img-fluid rounded-circle" alt="">
+                    </div>
+                    <div class="col-lg-6">
+                        <p> <em>If you want to learn how to keep employees from quitting and stay engaged, you’ll want to read this book and shift your perspective about the importance of having co-leaders instead of just hired workers.</em></p>
+                        <p><strong><em>Tullio Siragusa, Encora, Inc.</em></strong></p>
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row align-items-center justify-content-center justify-content-lg-start text-center text-lg-start">
+                    <div class="col-3 col-lg-2 offset-lg-2 ">
+                        <img src="https://via.placeholder.com/200x200" class="img-fluid rounded-circle" alt="">
+                    </div>
+                    <div class="col-lg-6">
+                        <p> <em>The authors describe a new way to conduct business that is more fair, more ethical and more efficient. They give you a framework on how to transform your company into a RADICAL company. I really enjoyed the book and will recommend it to my business savvy friends and colleagues. If you are looking to do impact and drive your workers give this book a read!</em></p>
+                        <p><strong><em>Anonymous</em></strong></p>
+                    </div>
+                </div>
+              </div>
+            
             </div>
-            <div class="col-lg-6">
-                <p> <em>If you want to learn how to keep employees from quitting and stay engaged, you’ll want to read this book and shift your perspective about the importance of having co-leaders instead of just hired workers.</em></p>
-                <p><strong><em>Tullio Siragusa, Encora, Inc.</em></strong></p>
-            </div>
-        </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+
+        
+          </div>
     </div>
 </section>
