--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,32 @@
 {% include header.html %}
 {% include hero.html %}
-{% include about-the-book.html %}
+
+<section class="bg-accent ripped">
+    <div class="container">
+       <div class="row justify-content-center">
+                  <div class="col-lg-8 text-lg-center text-white">
+                    <h2 class="text-white mb-3 ps-lg-5">Radical Companies</h2>
+                    <p>This book is about what we call RADICAL COMPANIES, owned and managed by the people who embody them and give them life. It is for people who want to make an impact on the world, not just to make money.</p>
+                  </div>
+                  
+              </div>
+    </div>
+  </section>
+
 {% include testimonials.html %}
 {% include buy.html %}
 {% include authors.html %}
+
+<section class="ripped-top-alt">
+    <div class="container">
+       <div class="row justify-content-center">
+                  <div class="col-lg-8 text-lg-center text-white">
+                    <h2 class="text-white mb-3 ps-lg-5">Radical Companies</h2>
+                    <p>This book is about what we call RADICAL COMPANIES, owned and managed by the people who embody them and give them life. It is for people who want to make an impact on the world, not just to make money.</p>
+                  </div>
+                  
+              </div>
+    </div>
+  </section>
+
 {% include footer.html %}
