--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -4,10 +4,10 @@
         <div class="col-lg-8 text-center text-lg-start">
           <h1 class="text-accent">Radical Companies</h1>
           <p class="lead text-orange"><strong>Without Bosses or Employees</strong></p>
-          <a href="#" class="btn btn-primary bg-orange">Get The Book</a>
+          <a href="#buy" class="btn btn-primary bg-orange bg-hover-accent">Get The Book</a>
         </div>
-        <div class="col-5 col-lg-4 mt-5 mt-lg-0">
-          <img src="/assets/img/cover-small.jpg" class="img-fluid" alt="">
+        <div class="col-6 mt-5 mt-lg-0  hero-img">
+          <img src="/assets/img/book-mockup.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
