--- a/_includes/post-sidebar.html
+++ b/_includes/post-sidebar.html
@@ -1,2 +1,12 @@
-<img src="/assets/img/cover-small.jpg" alt="" class="img-fluid">
-<p class="mt-3 text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, in!</p>
+<div class="text-center">
+    <img src="/assets/img/book-no-shadow.png" alt="" class="img-fluid">
+    <h5 class="text-orange text-center mt-3"><strong>Get the Book!</strong></h4>
+    <p class="mt-3">
+        <p><a href="https://www.amazon.com/RADICAL-Companies-Organized-Success-Employees/dp/164184650X/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1634152355&sr=8-3" class="btn bg-orange bg-hover-accent text-white">Amazon</a></p>
+        <p><a href="https://www.barnesandnoble.com/w/radical-companies-matt-perez/1139995398?ean=9781641846424" class="btn bg-orange bg-hover-accent text-white">Barnes&Noble</a></p>
+        <p><a href="https://www.lulu.com/en/us/shop/jose-leal-and-adrian-perez-and-matt-perez/radical-companies/ebook/product-n5jp7z.html?page=1&pageSize=4" class="btn bg-orange bg-hover-accent text-white">Lulu</a></p>
+        <script src="https://gumroad.com/js/gumroad.js"></script>
+        <p>Or pay what you can at</p>
+        <p><a class="btn bg-orange bg-hover-accent text-white" href="https://radicalcompanies.gumroad.com/l/kotjj">Gumroad</a></p>
+    </p>
+</div>
