--- a/_includes/authors.html
+++ b/_includes/authors.html
@@ -18,7 +18,7 @@
         <div class="card p-0 mb-5">
             <div class="row align-items-center">
                 <div class="col-lg-4 p-5 pe-0">
-                    <img src="/assets/img/authors/aperez.jpg" class="img-fluid" alt="">
+                    <img src="/assets/img/authors/aperez.jpg" class="img-fluid w-100" alt="">
                 </div>
                 <div class="col-lg-8 p-5 order-lg-1">
                     <h2 class="text-orange">Adrian Perez</h2>
