--- a/assets/custom.css
+++ b/assets/custom.css
@@ -88,6 +88,7 @@ nav a:hover svg{
 
 body{
   font-family: "Lora", sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h1, h2, h3, h4, h5, h6{
