--- a/assets/custom.css
+++ b/assets/custom.css
@@ -95,7 +95,7 @@ h1{
   font-family:Courier New, monospace;
 }
 
-h1, h2, h3, h4, h5, h6{
+h2, h3, h4, h5, h6{
     font-family: "Roboto", serif;
 }
 
