--- a/assets/custom.css
+++ b/assets/custom.css
@@ -91,12 +91,17 @@ body{
 }
 
 h1{
-  font-size:40px;
+  font-size:30px;
   font-family:Courier New, monospace;
 }
 
-h2, h3, h4, h5, h6{
-    font-family: "Roboto", serif;
+h2{
+  font-size:20px;
+  font-family:Courier New, monospace;
+}
+
+h3, h4, h5, h6{
+  font-family:Courier New, monospace;
 }
 
 h1{
