--- a/assets/custom.css
+++ b/assets/custom.css
@@ -90,17 +90,7 @@ body{
   font-family: "Lora", sans-serif;
 }
 
-h1{
-  font-size:30px;
-  font-family:Courier New, monospace;
-}
-
-h2{
-  font-size:20px;
-  font-family:Courier New, monospace;
-}
-
-h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6{
   font-family:Courier New, monospace;
 }
 
@@ -111,9 +101,17 @@ h1{
   margin: 0;
 }
 
+h1{
+  font-size:40px;
+}
+
 h2{
   font-size: 2rem;
   font-weight: 700;
+}
+
+h2{
+  font-size:30px;
 }
 
 h3{
