--- a/assets/custom.css
+++ b/assets/custom.css
@@ -90,6 +90,13 @@ body{
   font-family: "Lora", sans-serif;
 }
 
+.section {
+  font-size:45px;
+  font-family:Courier New, monospace;
+  text-align:center;
+  margin: 50px 0 20px 0;
+}
+
 h1, h2, h3, h4, h5, h6{
   font-family:Courier New, monospace;
 }
