--- a/assets/custom.css
+++ b/assets/custom.css
@@ -90,13 +90,6 @@ body{
   font-family: "Lora", sans-serif;
 }
 
-.section {
-  font-size:45px;
-  font-family:Courier New, monospace;
-  text-align:center;
-  margin: 50px 0 20px 0;
-}
-
 h1, h2, h3, h4, h5, h6{
   font-family:Courier New, monospace;
 }
@@ -108,17 +101,9 @@ h1{
   margin: 0;
 }
 
-h1{
-  font-size:40px;
-}
-
 h2{
   font-size: 2rem;
   font-weight: 700;
-}
-
-h2{
-  font-size:30px;
 }
 
 h3{
@@ -232,4 +217,17 @@ footer{
   .hero-img{
     margin-left: -250px;
   }
+}
+
+h1{
+  font-size:40px;
+}
+h1.section {
+  font-size:45px;
+  font-family:Courier New, monospace;
+  text-align:center;
+  margin: 50px 0 20px 0;
+}
+h2{
+  font-size:30px;
 }
