--- a/assets/custom.css
+++ b/assets/custom.css
@@ -235,3 +235,18 @@ h2{
 a.uparrow{
   height:20px;
 }
+table {
+  vertical-align:top;
+}
+tr {
+  vertical-align:text-top;
+  font-size:smaller;
+}
+th {
+  text-align:right;
+  padding-right:1em;
+}
+td {
+  text-align:left;
+  padding-left:1em;
+}
