--- a/assets/custom.css
+++ b/assets/custom.css
@@ -220,37 +220,37 @@ footer{
 }
 
 /* Matt's */
-h1{
+.container h1 {
   font-size:40px;
 }
-h1.section {
+.container h1.section {
   font-size:50px;
   font-family:Courier New, monospace;
   text-align:center;
   margin: 50px 0 20px 0;
 }
-h2{
+.container h2 {
   font-size:30px;
 }
-a.uparrow{
+.container a.uparrow {
   height:20px;
 }
-table {
+.container table {
   vertical-align:top;
 }
-tr {
+.container tr {
   vertical-align:text-top;
   font-size:smaller;
 }
-th {
+.container th {
   text-align:right;
   padding-right:1em;
 }
-td {
+.container td {
   text-align:left;
   padding-left:1em;
 }
-td.spacer {
+.container td.spacer {
   column-span: all;
   font-size:xx-small;
 }
