--- a/assets/custom.css
+++ b/assets/custom.css
@@ -226,7 +226,7 @@ h1 {
 h1._section {
   font-size:50px;
   font-family:'Courier New', Courier, monospace;
-  text-align:center;
+  text-align:right;
   margin: 50px 0 20px 0;
 }
 ._section li {
