--- a/assets/custom.css
+++ b/assets/custom.css
@@ -226,9 +226,11 @@ h1 {
 h1._section {
   font-size:50px;
   font-family:'Courier New', Courier, monospace;
-  font-size:smaller;
   text-align:center;
   margin: 50px 0 20px 0;
+}
+h1 ._section * {
+  font-size:smaller;
 }
 h2 {
   font-size:30px;
