--- a/assets/custom.css
+++ b/assets/custom.css
@@ -227,11 +227,12 @@ h1._section {
   font-size:50px;
   font-family:'Courier New', Courier, monospace;
   text-align:center;
-  margin: 100px 0 20px 0;
-  color: #ED8849;
+  margin:100px 0 20px 0;
+  color:#ED8849;
 }
 h1 ._section * {
   font-size:smaller;
+  color:crimson;
 }
 h2 {
   font-size:30px;
