--- a/assets/custom.css
+++ b/assets/custom.css
@@ -230,7 +230,7 @@ h1._section {
   margin:100px 0 20px 0;
   color:gray;
 }
-li {
+._section > * {
   font-size:smaller;
 }
 h2 {
@@ -241,7 +241,6 @@ a._uparrow img {
 }
 tr {
   vertical-align:text-top;
-  font-size:smaller;
 }
 th {
   text-align:right;
