--- a/assets/custom.css
+++ b/assets/custom.css
@@ -232,7 +232,7 @@ h1._section {
   margin:100px 0 20px 0;
   color:gray;
 }
-div h1 {
+div > h1 {
   font-size:larger !important;
   font-size:70px;
 }
