--- a/assets/custom.css
+++ b/assets/custom.css
@@ -221,9 +221,7 @@ footer{
 
 /* Matt's */
 h1 {
-/*
   font-size:40px;
-  */
 }
 h1._section {
   font-size:50px;
@@ -232,9 +230,8 @@ h1._section {
   margin:100px 0 20px 0;
   color:gray;
 }
-div > h1 {
+div.(col-lg-8, text-center, text-lg-start) h1 {
   font-size:larger;
-  font-size:70px;
 }
 h2 {
   font-size:30px;
