--- a/assets/custom.css
+++ b/assets/custom.css
@@ -233,7 +233,8 @@ h1._section {
   color:gray;
 }
 div.col-lg-8 > h1 {
-  font-size:larger;
+  font-size:80px;
+  color:orangered;
 }
 h2 {
   font-size:30px;
