--- a/assets/custom.css
+++ b/assets/custom.css
@@ -232,7 +232,7 @@ h1._section {
   margin:100px 0 20px 0;
   color:gray;
 }
-div.col-lg-8 > h1 {
+div.col-lg-8 h1 {
   font-size:80px;
   color:orangered;
 }
