--- a/assets/custom.css
+++ b/assets/custom.css
@@ -257,6 +257,7 @@ td._spacer {
 }}
 [span~=FIAT], [span~=RADICAL] {
   font-size:smaller;
+  color:red;
 }
 [a~='https:']::after {
     content:target='_blank';
