--- a/assets/custom.css
+++ b/assets/custom.css
@@ -252,6 +252,10 @@ td {
   padding-left:1em;
 }
 td._spacer {
-  column-span: all;
+  column-span:all;
   font-size:x-small;
+}
+
+p._list-item {
+  padding-bottom:5px;
 }
