--- a/assets/custom.css
+++ b/assets/custom.css
@@ -255,7 +255,9 @@ td._spacer {
   column-span:all;
   font-size:x-small;
 }
-
 p._list-item {
   padding-bottom:3px;
+}
+a > p._list-item {
+  padding-bottom:1px;
 }
