--- a/assets/custom.css
+++ b/assets/custom.css
@@ -230,8 +230,11 @@ h1._section {
   margin:100px 0 20px 0;
   color:gray;
 }
-.lead, .text-lg-start {
+.text-lg-start h1 {
   font-size:70px;
+}
+.text-lg-start p {
+  font-size:30px;
 }
 h2 {
   font-size:30px;
