--- a/assets/custom.css
+++ b/assets/custom.css
@@ -269,6 +269,6 @@ td._spacer {
 ._paradigm {
   font-size:smaller;
 }
-a[href$='http']::after {
+a [href$='http'] {
   content: ' target="_blank; "'
 }
