--- a/assets/custom.css
+++ b/assets/custom.css
@@ -271,6 +271,6 @@ td._spacer {
 }
 ._uderDev {
   font-weight:bold;
-  font-family:roboto, sans-serif;
+  font-family:sans-serif;
   font-size:x-small;
 }
