--- a/assets/custom.css
+++ b/assets/custom.css
@@ -269,7 +269,7 @@ td._spacer {
 ._paradigm {
   font-size:smaller;
 }
-._uderDev {
+._underDev {
   font-weight:bold;
   font-family:sans-serif;
   font-size:x-small;
