--- a/assets/custom.css
+++ b/assets/custom.css
@@ -292,9 +292,9 @@ td._spacer {
   padding:1em 1em 0 1em;
   margin-bottom:1em; 
 }
-.quotation::before {
+._quotation::before {
   content:open-quote;
 }
-.quotation::after {
+._quotation::after {
   content:close-quote;
 }
