--- a/assets/custom.css
+++ b/assets/custom.css
@@ -290,7 +290,7 @@ td._spacer {
   border:1px solid CadetBlue;
   padding:0 2em 0 2em;
   width:70%;
-  margin: 0 auto 3em auto;
+  margin: 0 auto 20px auto;
 }
 ._quotation::before {
   font-size:xx-large;
