--- a/assets/custom.css
+++ b/assets/custom.css
@@ -288,7 +288,7 @@ td._spacer {
   white-space:normal;
 
   border:1px solid CadetBlue;
-  padding:0 2em 0 2em;
+  padding:2em 2em 0 2em;
   width:80%;
   margin: 0 auto 30px auto;
 }
