--- a/assets/custom.css
+++ b/assets/custom.css
@@ -282,7 +282,7 @@ td._spacer {
 
   font-style:italic;
   font-size:smaller;
-  font-family:American Typewriter, serif;
+  font-family:'American Typewriter', serif;
   
   background-color:beige;
   white-space:normal;
