--- a/assets/custom.css
+++ b/assets/custom.css
@@ -263,6 +263,9 @@ td {
 td._spacer {
   column-span:all;
 }
+._spacer {
+  font-size:xx-small;
+}
 ._list-item {
   margin-bottom:0.5em;
   text-align:justify;
