--- a/assets/custom.css
+++ b/assets/custom.css
@@ -254,8 +254,10 @@ tr {
 th {
   text-align:right;
   padding-right:1em;
-  margin-bottom:0;
   width:1.5in;
+}
+th.ul {
+  margin-bottom:0;
 }
 td {
   text-align:left;
