--- a/assets/custom.css
+++ b/assets/custom.css
@@ -262,7 +262,7 @@ th {
   padding-right:1em;
   width:1.5in;
   font-size:smaller;
-  border-
+  border-right:1px solid black;
 }
 td {
   text-align:left;
