--- a/assets/custom.css
+++ b/assets/custom.css
@@ -274,6 +274,9 @@ td._spacer {
   column-span:all;
   font-size:7px;
 }
+td._spacer:after {
+  content:" ";
+}
 ._spacer {
   font-size:xx-small;
 }
