--- a/assets/custom.css
+++ b/assets/custom.css
@@ -325,7 +325,9 @@ td._spacer:after {
 }
 ._quotespan::before {
   content:"“";
-  font-style:italic;
+}
+._quotespan {
+  font-style: italic;
 }
 ._quotespan::after {
   content: "”";
