--- a/assets/custom.css
+++ b/assets/custom.css
@@ -230,10 +230,10 @@ h2 {
   font-size:30px;
 }
 h1 h2 {
-  padding-left:1m;
+  margin-left:1m;
 }
 h1 h2 p {
-  padding-left:2m;
+  margin-left:2m;
 }
 li {
   font-size:smaller;
