--- a/assets/custom.css
+++ b/assets/custom.css
@@ -229,10 +229,10 @@ h1 {
 h2 {
   font-size:30px;
 }
-h1 + h2 {
+h1 ~ h2 {
   margin-left:1m;
 }
-h1 + h2 + p {
+h1 ~ h2 ~ p {
   margin-left:2m;
 }
 li {
