--- a/assets/custom.css
+++ b/assets/custom.css
@@ -228,17 +228,11 @@ h1 {
 h2 {
   font-size:30px;
 }
-h1~p, h1~h2 {
-  margin-left:1m;
-}
-h2~p {
-  margin-left:2m;
-}
 h1~p::before, h1~h2::before {
-  content: " > ";
+  content: "  ";
 }
  h2~p::before {
-  content:" >> ";
+  content:"    ";
 }
 li {
   font-size:smaller;
