--- a/assets/custom.css
+++ b/assets/custom.css
@@ -228,6 +228,13 @@ h1 {
 h2 {
   font-size:30px;
 }
+h1~p, h1~h2 {
+  margin-left:2em;
+}
+
+h2~p {
+  margin-left:4em;
+}
 h1~p::before, h1~h2::before {
   content: "  ";
 }
