--- a/assets/custom.css
+++ b/assets/custom.css
@@ -228,9 +228,20 @@ h1 {
 h2 {
   font-size:30px;
 }
-h1~h2, h1~p, h2~p {
+
+h1~h2 {
   margin-left:1em;
+  color:orange;
 }
+h2~p {
+  margin-left:1em;
+  color:blue;
+}
+h2~p {
+  margin-left:1em;
+  color:red;
+}
+
 li {
   font-size:smaller;
 }
