--- a/assets/custom.css
+++ b/assets/custom.css
@@ -242,13 +242,9 @@ h1~h2 {
   color:green;
 }
 
-h2+p {
+h2~p {
   margin-left: 2em;
   color:red;
-}
-h2>p {
-  margin-left: 2em;
-  color:rebeccapurple;
 }
 
 h1~p {
