--- a/assets/custom.css
+++ b/assets/custom.css
@@ -229,7 +229,7 @@ h2 {
   font-size:30px;
 }
 
-h1~h2 {
+h1~div~h2 {
   margin-left:1em;
   color:royalblue;
 }
@@ -237,7 +237,7 @@ h2~div~p {
   margin-left:2em;
   color:red;
 }
-h1~p {
+h1~div~p {
   margin-left:2em;
   color:greenyellow;
 }
