--- a/assets/custom.css
+++ b/assets/custom.css
@@ -333,3 +333,6 @@ td._spacer:after {
 ._quotespan::after {
   content: "”";
 }
+.anim {
+  animation: animated-text 4s steps(16) 1s 1 normal both, animated-cursor 500ms steps(16);
+}
